=final answer is saved now

--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -3262,7 +3262,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "**Answer** # Weighting the portfolio more heavily to stocks does improve the potential upper bound of stock/bond portfolio for any given horizon. Therefore, it may allow the members to retire earlier (definitely earlier than if weighting is less towards stocks). Whether it will be 10 years, 15 years or 20 years will depend on portfolio value that members are targetting."
+    "**Answer** # \n",
+    "Weighting the portfolio more heavily to stocks does improve the potential upper bound of stock/bond portfolio for any given horizon. Therefore, it may allow the members to retire earlier (definitely earlier than if weighting is less towards stocks). Whether it will be 10 years, 15 years or 20 years will depend on portfolio value that members are targetting."
    ]
   },
   {
